@@ -29,7 +29,6 @@ $settings = array('base_doc_directory'   => PHPWS_HOME_DIR . 'files/filecabinet/
                   'vertical_folder'      => false,
                   'number_visible'       => 3,
                   'force_thumbnail_dimensions' => 0,
-                  'fck_all_folders'      => 1,
                   'fck_allow_images'     => 1,
                   'fck_allow_documents'  => 1,
                   'fck_allow_media'      => 1
