@@ -1,3 +1,6 @@
+25 March 2009
++ Added file type limits to fckeditor
+
 23 March 2009
 + Added method for fixing document directories
 + Added file search to folder pager
